added component HOC Authorization, files of firebase moved to own directory

--- a/src/components/Artists/Artist.scss
+++ b/src/components/Artists/Artist.scss
@@ -1,7 +1,7 @@
 $background: #fff;
 $title-color: #000;
 $title-color-hover: #c2c7c9;
-$listeners-color: #9d9c9c;
+$listeners-color: #8c8b88;
 
 .card {
   &.artist {
