--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,5 @@
-body {
-  background-color: #f7f7f7; }
-
-.top-bar {
-  /*background-color: #16D887;*/
-  /*background-color: rgba(0,0,0,.6);*/
-  /*background-color: #04D976;*/
-  background-color: white; }
-
-.top-bar ul {
-  background-color: transparent; }
-
 .required::after {
+  color: #f00;
   content: '*';
-  padding-left: 5px;
   font-size: 16px;
-  color: red; }
+  padding-left: 5px; }
